[package]
name = "bfs_fuse"
version = "0.1.0"
authors = ["Ludovic Galabru <ludovic@blockstack.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.7"
bip39 = "0.6.0-beta.1"
blockstack = { package = "lib-blockstack", path = "../lib_blockstack" }
bfs_http_client = { package = "bfs-http-client", path = "../http/src/client" }
env_logger = "0.6.0"
fuse = "0.3.1"
time = "0.1.42"
libc = "0.2.59"
log = "0.4.6"
thread-scoped = "1.0.2"
tokio = "=0.2.0-alpha.1"
# web-view = "0.4.1"