[package]
name = "lib-bfs"
version = "0.1.0"
authors = ["Ludovic Galabru <ludovic@blockstack.com>"]
edition = "2018"

[dependencies]
auth = { package = "bfs-auth", path = "./src/auth" }
primitives = { package = "bfs-primitives", path = "./src/primitives" }
drivers = { package = "bfs-drivers", path = "./src/drivers" }
drivers_aws = { package = "bfs-drivers-aws", path = "./src/drivers/src/aws" }
