[package]
name = "lib-blockstack"
version = "0.1.0"
authors = ["Ludovic Galabru <ludovic@blockstack.com>"]
edition = "2018"

[dependencies]
auth = { package = "blockstack-auth", path = "./src/auth" }
bns = { package = "blockstack-bns", path = "./src/bns" }
storage = { package = "blockstack-storage", path = "./src/storage/core" }
types = { package = "blockstack-types", path = "./src/types" }
