[package]
name = "bfs_auth"
version = "0.1.0"
authors = ["Ludovic Galabru <ludovic@blockstack.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
secp256k1 = "0.15.1"
base64 = "0.10.1"
bs58 = "0.2.2"
sha2 = "0.8.0"
ripemd160 = "0.8.0"
uuid = { version = "0.7", features = ["v4"] }
rand = "0.7.0"
# todo(ludo): crates added as shortcuts - should be re-implemented
hdwallet = "0.2.2" 
hex = "0.3.2"
