[package]
name = "bfs-commands"
version = "0.1.0"
authors = ["Ludovic Galabru <ludovic@blockstack.com>"]
edition = "2018"

[dependencies]
jsonwebtoken = "6"
serde_derive = "1"
serde = "1"
drivers = { package = "bfs-drivers", path = "../drivers" }
drivers_aws = { package = "bfs-drivers-aws", path = "../drivers/src/aws" }
