[package]
name = "blockstack-auth"
version = "0.1.0"
authors = ["Ludovic Galabru <ludovic@blockstack.com>"]
edition = "2018"

[dependencies]
aes = "0.3.2"
base64 = "0.10.1"
block-modes = "0.3.3"
bs58 = "0.2.2"
rand = "0.7.0"
ring = "0.16.5"
ripemd160 = "0.8.0"
secp256k1 = { version = "0.15.1", features = ["rand"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sha2 = "0.8.0"
uuid = { version = "0.7", features = ["v4"] }
hmac = "0.7.0"
pbkdf2 = { version = "0.3.0", features=["parallel"], default-features = false }


# todo(ludo): crates added as shortcuts - should be re-implemented
hex = "0.3.2"
