[package]
name = "blockstack-storage-core"
version = "0.1.0"
authors = ["Ludovic Galabru <ludovic@blockstack.com>"]
edition = "2018"

[dependencies]
serde_derive = "1"
serde = "1"
# todo(ludo): short cut
driver_aws = { package = "blockstack-storage-aws", path = "../drivers/aws" }
primitives = { package = "blockstack-primitives", path = "../../primitives" }
async-trait = "0.1.7"