[package]
name = "blockstack-storage"
version = "0.1.0"
authors = ["Ludovic Galabru <ludovic@blockstack.com>"]
edition = "2018"

[dependencies]
serde_derive = "1"
serde = "1"
# todo(ludo): short cut
blockstack_storage_aws = { package = "blockstack-storage-aws", path = "../drivers/aws" }
blockstack_types = { package = "blockstack-types", path = "../../types" }
async-trait = "0.1.7"