[package]
name = "blockstack-storage-aws"
version = "0.1.0"
authors = ["Ludovic Galabru <ludovic@blockstack.com>"]
edition = "2018"

[dependencies]
rusoto_core = "0.40"
rusoto_credential = "0.40"
rusoto_s3 = "0.40"
futures = "0.1"
tokio = "0.1"
blockstack_types = { package = "blockstack-types", path = "../../../types" }
